feat: finish login signup and logout

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -9,5 +9,9 @@
   "sign-up": "Sign up",
   "email": "Email",
   "password": "Password",
-  "repeat-password": "Repeat password"
+  "repeat-password": "Repeat password",
+  "passwords-do-not-match": "Passwords do not match",
+  "my-account": "My account",
+  "config": "Configuration",
+  "logout": "Log out"
 }
