--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -3,8 +3,16 @@
   "profile": "Profile",
   "configuration": "Configuration",
   "select-bookies": "Select Bookies",
-  "select-tipster": "Select Tipster",
+  "select-bookies-description": "Mark the bookies you want us to offer when you create new bets",
+  "select-tipster": "Manage Tipsters",
+  "select-tipsters-empty": "You haven't added any Tipsters yet. Create one to be able to assign bets 😉",
+  "select-tipsters-description": "Create, edit or remove your Tipsters",
   "add-tipster": "Add Tipster",
+  "save-changes": "Save changes",
+  "remove-tipster-title": "Remove Tipster",
+  "remove-tipster-text": "Are you sure you want to remove this Tipster: {name}?",
+  "remove-tipster-confirm": "Remove",
+  "remove-tipster-cancel": "Cancel",
   "login": "Log in",
   "sign-up": "Sign up",
   "email": "Email",
@@ -18,5 +26,13 @@
   "confirm-email-text": "We have sent a confirmation email to {email}",
   "confirm-email-resend-text": "If you haven't received the email, click on the button below",
   "confirm-email-spam-text": "**Remember to check your spam folder...**",
-  "confirm-email-resend-email-btn": "Resend Email"
+  "confirm-email-resend-email-btn": "Resend Email",
+  "menu-dashboard": "Dashboard",
+  "menu-bets": "Bets",
+  "menu-bookies": "Bookies",
+  "menu-tipsters": "Tipsters",
+  "create-tipster-modal-title": "{isCreate, select, true {New Tipster} other {Edit Tipster}}",
+  "create-tipster-modal-name": "Name *",
+  "create-tipster-modal-price": "Price (Optional)",
+  "create-tipster-modal-create": "{isCreate, select, true {Add Tipster} other {Edit Tipster}}"
 }
