--- a/src/lib/locales/es.json
+++ b/src/lib/locales/es.json
@@ -3,8 +3,16 @@
   "profile": "Perfil",
   "configuration": "Configuración",
   "select-bookies": "Seleccionar Bookies",
-  "select-tipster": "Seleccionar Tipster",
+  "select-bookies-description": "Marca las bookies que quieras que te ofrezcamos cuando crees nuevas apuestas",
+  "select-tipster": "Gestionar Tipsters",
   "add-tipster": "Añadir Tipster",
+  "select-tipsters-description": "Crea, edita o elimina tus Tipsters",
+  "select-tipsters-empty": "Aún no has añadido ningún Tipster. Crea uno para poder asignarle apuestas 😉",
+  "save-changes": "Guardar cambios",
+  "remove-tipster-title": "Eliminar Tipster",
+  "remove-tipster-text": "¿Estás seguro de que quieres eliminar este Tipster: {name}?",
+  "remove-tipster-confirm": "Eliminar",
+  "remove-tipster-cancel": "Cancelar",
   "login": "Iniciar sesión",
   "sign-up": "Registrarme",
   "email": "Email",
@@ -18,5 +26,13 @@
   "confirm-email-text": "Te hemos enviado un email de confirmación a {email}",
   "confirm-email-resend-text": "Si no has recibido el email, haz click en el boton de abajo",
   "confirm-email-spam-text": "**Recuerda revisar tu carpeta de spam...",
-  "confirm-email-resend-email-btn": "Reenviar email"
+  "confirm-email-resend-email-btn": "Reenviar email",
+  "menu-dashboard": "Dashboard",
+  "menu-bets": "Apuestas",
+  "menu-bookies": "Bookies",
+  "menu-tipsters": "Tipsters",
+  "create-tipster-modal-title": "{isCreate, select, true {Nuevo Tipster} other {Editar Tipster}}",
+  "create-tipster-modal-name": "Nombre *",
+  "create-tipster-modal-price": "Precio (Opcional)",
+  "create-tipster-modal-create": "{isCreate, select, true {Añadir Tipster} other {Editar Tipster}}"
 }
