feat: add my account section and update userdata form

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -1,6 +1,10 @@
 {
   "hi": "Hello",
   "profile": "Profile",
+  "profile-user": "{userType, select, admin {Admin} premium {Premium User} other {User}}",
+  "profile-account": "My account",
+  "profile-account-description": "Check or edit your personal data",
+  "profile-configuration": "Configuration",
   "configuration": "Configuration",
   "select-bookies": "Select Bookies",
   "select-bookies-description": "Mark the bookies you want us to offer when you create new bets",
@@ -31,6 +35,8 @@
   "menu-bets": "Bets",
   "menu-bookies": "Bookies",
   "menu-tipsters": "Tipsters",
+  "user-form-name": "Name",
+  "user-form-lastname": "Lastname",
   "create-tipster-modal-title": "{isCreate, select, true {New Tipster} other {Edit Tipster}}",
   "create-tipster-modal-name": "Name *",
   "create-tipster-modal-price": "Price (Optional)",
