--- a/src/lib/locales/es.json
+++ b/src/lib/locales/es.json
@@ -1,6 +1,10 @@
 {
   "hi": "Hola",
   "profile": "Perfil",
+  "profile-user": "{userType, select, admin {Administrador} premium {Usuario premium} other {Usuario}}",
+  "profile-account": "Mi cuenta",
+  "profile-account-description": "Consulta o edita tus datos personales",
+  "profile-configuration": "Configuración",
   "configuration": "Configuración",
   "select-bookies": "Seleccionar Bookies",
   "select-bookies-description": "Marca las bookies que quieras que te ofrezcamos cuando crees nuevas apuestas",
@@ -31,6 +35,8 @@
   "menu-bets": "Apuestas",
   "menu-bookies": "Bookies",
   "menu-tipsters": "Tipsters",
+  "user-form-name": "Nombre",
+  "user-form-lastname": "Apellidos",
   "create-tipster-modal-title": "{isCreate, select, true {Nuevo Tipster} other {Editar Tipster}}",
   "create-tipster-modal-name": "Nombre *",
   "create-tipster-modal-price": "Precio (Opcional)",
