feat: create basic modal and begin with create bet modal

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -12,6 +12,7 @@
   "select-tipsters-empty": "You haven't added any Tipsters yet. Create one to be able to assign bets 😉",
   "select-tipsters-description": "Create, edit or remove your Tipsters",
   "add-tipster": "Add Tipster",
+  "add-bet": "Add bet",
   "save-changes": "Save changes",
   "remove-tipster-title": "Remove Tipster",
   "remove-tipster-text": "Are you sure you want to remove this Tipster: {name}?",
@@ -24,8 +25,8 @@
   "repeat-password": "Repeat password",
   "passwords-do-not-match": "Passwords do not match",
   "my-account": "My account",
-  "config": "Configuration",
   "logout": "Log out",
+  "dashboard-description": "Here you can see a summary of your bets and your statistics. {hasBets, select, false {To do this, create new bets from the 'Add bet' button} other {}}",
   "confirm-email-title": "Thanks for registering on BETCONTROL!",
   "confirm-email-text": "We have sent a confirmation email to {email}",
   "confirm-email-resend-text": "If you haven't received the email, click on the button below",
