--- a/src/lib/locales/es.json
+++ b/src/lib/locales/es.json
@@ -10,6 +10,7 @@
   "select-bookies-description": "Marca las bookies que quieras que te ofrezcamos cuando crees nuevas apuestas",
   "select-tipster": "Gestionar Tipsters",
   "add-tipster": "Añadir Tipster",
+  "add-bet": "Añadir apuesta",
   "select-tipsters-description": "Crea, edita o elimina tus Tipsters",
   "select-tipsters-empty": "Aún no has añadido ningún Tipster. Crea uno para poder asignarle apuestas 😉",
   "save-changes": "Guardar cambios",
@@ -24,8 +25,8 @@
   "repeat-password": "Repetir contraseña",
   "passwords-do-not-match": "Las contraseñas no coinciden",
   "my-account": "Mi cuenta",
-  "config": "Configuración",
   "logout": "Cerrar sesión",
+  "dashboard-description": "Aquí puedes ver un resumen de tus apuestas y tus estadísticas. {hasBets, select, false {Para ello crea nuevas apuestas desde el botón de Añadir apuesta.} other {}}",
   "confirm-email-title": "¡Gracias por registrarte en BETCONTROL!",
   "confirm-email-text": "Te hemos enviado un email de confirmación a {email}",
   "confirm-email-resend-text": "Si no has recibido el email, haz click en el boton de abajo",
