feat: build bet form

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -13,6 +13,7 @@
   "select-tipsters-description": "Create, edit or remove your Tipsters",
   "add-tipster": "Add Tipster",
   "add-bet": "Add bet",
+  "add-movement": "Add movement",
   "save-changes": "Save changes",
   "remove-tipster-title": "Remove Tipster",
   "remove-tipster-text": "Are you sure you want to remove this Tipster: {name}?",
@@ -26,7 +27,28 @@
   "passwords-do-not-match": "Passwords do not match",
   "my-account": "My account",
   "logout": "Log out",
-  "dashboard-description": "Here you can see a summary of your bets and your statistics. {hasBets, select, false {To do this, create new bets from the 'Add bet' button} other {}}",
+  "dashboard-description": "Here you can see a summary of your bets and your statistics. {hasBets, select, false {To do this, create new bets in bet's page} other {}}",
+  "bets-description": "On this page you will be able to create, edit and delete your bets. {hasBets, select, false {To start, create a bet by clicking on the button on the right.} other {}}",
+  "bet-modal-bookie": "Bookie",
+  "bet-modal-date": "Date",
+  "bet-modal-sport": "Sport",
+  "bet-modal-name": "Bet",
+  "bet-modal-odd": "Odd",
+  "bet-modal-amount": "Amount",
+  "bet-modal-status": "Status",
+  "bet-modal-has-tipster": "Is this bet a Tipster bet?",
+  "bet-modal-tipster": "Tipster",
+  "bet-modal-error": "Fill all the fields in the main block",
+  "bet-modal-create": "{isCreate, select, true {Add bet} other {Edit bet}}",
+  "bet-modal-more-options": "More options",
+  "bet-modal-has-cashout": "Cashout",
+  "bet-modal-cashout": "Cashout amount",
+  "bet-modal-isLive": "Is  a live bet?",
+  "bet-modal-isBonus": "Is a freebet?",
+  "pending": "Pending",
+  "won": "Won",
+  "lost": "Lost",
+  "canceled": "Canceled",
   "confirm-email-title": "Thanks for registering on BETCONTROL!",
   "confirm-email-text": "We have sent a confirmation email to {email}",
   "confirm-email-resend-text": "If you haven't received the email, click on the button below",
@@ -38,9 +60,26 @@
   "menu-tipsters": "Tipsters",
   "user-form-name": "Name",
   "user-form-lastname": "Lastname",
+  "create-bet-modal-title": "{isCreate, select, true {New bet} other {Edit bet}}",
   "create-tipster-modal-title": "{isCreate, select, true {New Tipster} other {Edit Tipster}}",
   "create-tipster-modal-name": "Name *",
   "create-tipster-modal-price": "Price (Optional)",
   "create-tipster-modal-error": "The name cannot be empty",
-  "create-tipster-modal-create": "{isCreate, select, true {Add Tipster} other {Edit Tipster}}"
+  "create-tipster-modal-create": "{isCreate, select, true {Add Tipster} other {Edit Tipster}}",
+  "volleyball": "Volleyball",
+  "basketball": "Basketball",
+  "football": "Football",
+  "baseball": "Baseball",
+  "hockey": "Hockey",
+  "tennis": "Tennis",
+  "golf": "Golf",
+  "racing": "Racing",
+  "rugby": "Rugby",
+  "cycling": "Cycling",
+  "badminton": "Badminton",
+  "table-tennis": "Table Tennis",
+  "horse-racing": "Horse Racing",
+  "boxing": "Boxing",
+  "martial-arts": "Martial Arts",
+  "others": "Others"
 }
