--- a/src/lib/locales/es.json
+++ b/src/lib/locales/es.json
@@ -9,10 +9,11 @@
   "select-bookies": "Seleccionar Bookies",
   "select-bookies-description": "Marca las bookies que quieras que te ofrezcamos cuando crees nuevas apuestas",
   "select-tipster": "Gestionar Tipsters",
-  "add-tipster": "Añadir Tipster",
-  "add-bet": "Añadir apuesta",
   "select-tipsters-description": "Crea, edita o elimina tus Tipsters",
   "select-tipsters-empty": "Aún no has añadido ningún Tipster. Crea uno para poder asignarle apuestas 😉",
+  "add-tipster": "Añadir Tipster",
+  "add-bet": "Añadir apuesta",
+  "add-movement": "Añadir movimiento",
   "save-changes": "Guardar cambios",
   "remove-tipster-title": "Eliminar Tipster",
   "remove-tipster-text": "¿Estás seguro de que quieres eliminar este Tipster: {name}?",
@@ -26,7 +27,28 @@
   "passwords-do-not-match": "Las contraseñas no coinciden",
   "my-account": "Mi cuenta",
   "logout": "Cerrar sesión",
-  "dashboard-description": "Aquí puedes ver un resumen de tus apuestas y tus estadísticas. {hasBets, select, false {Para ello crea nuevas apuestas desde el botón de Añadir apuesta.} other {}}",
+  "dashboard-description": "Aquí puedes ver un resumen de tus apuestas y tus estadísticas. {hasBets, select, false {Para ello crea nuevas apuestas en la página de apuestas.} other {}}",
+  "bets-description": "En esta página podrás crear, editar y borrar tus apuestas. {hasBets, select, false {Para empezar, crea una apuesta con el botón de la derecha.} other {}}",
+  "bet-modal-bookie": "Bookie",
+  "bet-modal-date": "Fecha",
+  "bet-modal-sport": "Deporte",
+  "bet-modal-name": "Apuesta",
+  "bet-modal-odd": "Cuota",
+  "bet-modal-amount": "Importe",
+  "bet-modal-status": "Estado",
+  "bet-modal-has-tipster": "¿Esta apuesta es de un Tipster?",
+  "bet-modal-tipster": "Tipster",
+  "bet-modal-error": "Rellena todos los campos del bloque principal",
+  "bet-modal-create": "{isCreate, select, true {Añadir apuesta} other {Editar apuesta}}",
+  "bet-modal-more-options": "Más opciones",
+  "bet-modal-has-cashout": "Cashout",
+  "bet-modal-cashout": "Importe del cashout",
+  "bet-modal-isLive": "¿Es una apuesta en vivo?",
+  "bet-modal-isBonus": "¿Es una freebet?",
+  "pending": "Pendiente",
+  "won": "Ganada",
+  "lost": "Perdida",
+  "canceled": "Cancelada",
   "confirm-email-title": "¡Gracias por registrarte en BETCONTROL!",
   "confirm-email-text": "Te hemos enviado un email de confirmación a {email}",
   "confirm-email-resend-text": "Si no has recibido el email, haz click en el boton de abajo",
@@ -38,9 +60,26 @@
   "menu-tipsters": "Tipsters",
   "user-form-name": "Nombre",
   "user-form-lastname": "Apellidos",
+  "create-bet-modal-title": "{isCreate, select, true {Nueva apuesta} other {Editar apuesta}}",
   "create-tipster-modal-title": "{isCreate, select, true {Nuevo Tipster} other {Editar Tipster}}",
   "create-tipster-modal-name": "Nombre *",
   "create-tipster-modal-price": "Precio (Opcional)",
   "create-tipster-modal-error": "El nombre no puede estar vacío",
-  "create-tipster-modal-create": "{isCreate, select, true {Añadir Tipster} other {Editar Tipster}}"
+  "create-tipster-modal-create": "{isCreate, select, true {Añadir Tipster} other {Editar Tipster}}",
+  "volleyball": "Voleibol",
+  "basketball": "Baloncesto",
+  "football": "Fútbol",
+  "baseball": "Béisbol",
+  "hockey": "Hockey",
+  "tennis": "Tenis",
+  "golf": "Golf",
+  "racing": "Carreras",
+  "rugby": "Rugby",
+  "cycling": "Ciclismo",
+  "badminton": "Badminton",
+  "table-tennis": "Table Tennis",
+  "horse-racing": "Carreras de Caballos",
+  "boxing": "Boxeo",
+  "martial-arts": "Artes Marciales",
+  "others": "Otros"
 }
